--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,24 @@ body {
   width: 800px;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 48px 24px 48px;
+}
+
 h1 {
   font-size: 24px;
   font-weight: 700;
+  max-width: 400px;
+  background-image: url(/assets/temp.svg);
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  padding-left: 64px;
 }
