Adding data text tags

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,3 +46,14 @@ h1 {
   background-position: 0 50%;
   padding-left: 64px;
 }
+
+text {
+  fill: var(--text-color);
+  text-anchor: end;
+}
+
+text.city {
+  font-size: 32px;
+  font-weight: 700;
+}
+
