--- a/styles/style.css
+++ b/styles/style.css
@@ -57,3 +57,13 @@ text.city {
   font-weight: 700;
 }
 
+text.temp {
+  text-anchor: middle;
+  dominant-baseline: middle;
+  font-size: 18;
+  font-weight: 700;
+}
+
+circle {
+  fill: var(--text-color);
+}
