--- a/styles/style.css
+++ b/styles/style.css
@@ -62,8 +62,16 @@ text.temp {
   dominant-baseline: middle;
   font-size: 18;
   font-weight: 700;
+  opacity: 0;
 }
 
 circle {
   fill: var(--text-color);
+  opacity: 0;
+}
+
+path {
+  stroke: var(--text-color);
+  stroke-width: 4px;
+  fill: none;
 }
